--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 21:05:02 2018</p>
+         Last Run: Fri Nov  2 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>6</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,17 +46,17 @@
                         <td>3</td>
                         <td>1</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>62</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>3</td>
                         <td>59</td>
                         <td>1</td>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "1",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "0",
                  "3",
-                 "5"
+                 "6"
                ]
              }
            ]
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "69",
+                 "82",
+                 "70",
                  "59"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "62",
+                 "69",
+                 "64",
                  "59"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 21:05:02 2018</p>
+         Last Run: Fri Nov  2 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,36 +248,36 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>4</td>
-                        <td>51</td>
-                        <td>54</td>
+                        <td>53</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>89</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>42</td>
-                        <td>49</td>
+                        <td>7</td>
+                        <td>4</td>
+                        <td>40</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>NNW</td>
-                        <td>91</td>
+                        <td>NW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>33</td>
-                        <td>46</td>
+                        <td>32</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>86</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>87</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "4",
-                 "6",
+                 "4",
                  "9"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "7",
-                 "8",
+                 "7",
                  "9"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "51",
-                 "42",
-                 "33"
+                 "53",
+                 "40",
+                 "32"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "49",
-                 "46"
+                 "65",
+                 "60",
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "91",
-                 "86"
+                 "97",
+                 "88",
+                 "87"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 21:05:02 2018</p>
+         Last Run: Fri Nov  2 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>80</td>
+                        <td>13</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>96</td>
                      </tr>
                      <tr>
@@ -476,10 +476,10 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>10</td>
-                        <td>82</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
+                        <td>E</td>
                         <td>96</td>
                      </tr>
                      <tr>
@@ -487,10 +487,10 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>10</td>
-                        <td>84</td>
+                        <td>9</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>ESE</td>
                         <td>95</td>
                      </tr>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
+                 "13",
                  "10",
-                 "10"
+                 "9"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "82",
-                 "84"
+                 "78",
+                 "79",
+                 "81"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 21:05:02 2018</p>
+         Last Run: Fri Nov  2 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -691,7 +691,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -706,7 +706,7 @@
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -817,7 +817,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "67",
+                 "66",
                  "67"
                ]
              },
