--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 22:05:02 2018</p>
+         Last Run: Fri Nov  2 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,26 +31,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>0</td>
-                        <td>-2</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>6</td>
-                        <td>82</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>69</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
                         <td>4</td>
                         <td>70</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>64</td>
+                        <td>WSW</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>6</td>
                         <td>4</td>
                         <td>3</td>
-                        <td>59</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>59</td>
+                        <td>WSW</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "1",
                  "4"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
+                 "1",
                  "3",
                  "6"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
+                 "80",
                  "70",
-                 "59"
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "64",
-                 "59"
+                 "79",
+                 "57",
+                 "55"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 22:05:02 2018</p>
+         Last Run: Fri Nov  2 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>7</td>
                         <td>4</td>
                         <td>53</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
@@ -259,11 +259,11 @@
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
-                        <td>4</td>
-                        <td>40</td>
+                        <td>5</td>
+                        <td>41</td>
                         <td>60</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>88</td>
                      </tr>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "4",
-                 "4",
+                 "5",
                  "9"
                ]
              },
@@ -376,7 +376,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "53",
-                 "40",
+                 "41",
                  "32"
                ]
              },
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "64",
                  "60",
                  "52"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 22:05:02 2018</p>
+         Last Run: Fri Nov  2 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>13</td>
-                        <td>78</td>
+                        <td>11</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
+                 "11",
                  "10",
                  "9"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
+                 "77",
                  "79",
                  "81"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 22:05:02 2018</p>
+         Last Run: Fri Nov  2 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -691,7 +691,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -706,7 +706,7 @@
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>W</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -817,7 +817,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "66",
+                 "67",
                  "67"
                ]
              },
