--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 23:05:02 2018</p>
+         Last Run: Sat Nov  3 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-1</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>79</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>4</td>
-                        <td>70</td>
+                        <td>5</td>
+                        <td>72</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>57</td>
+                        <td>SW</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "4",
+                 "5",
                  "3"
                ]
              },
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "70",
+                 "82",
+                 "72",
                  "57"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "57",
-                 "55"
+                 "83",
+                 "59",
+                 "56"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 23:05:02 2018</p>
+         Last Run: Sat Nov  3 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>4</td>
-                        <td>53</td>
-                        <td>64</td>
+                        <td>56</td>
+                        <td>65</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
@@ -260,22 +260,22 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>41</td>
+                        <td>46</td>
                         <td>60</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>32</td>
-                        <td>52</td>
+                        <td>33</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
                         <td>87</td>
                      </tr>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
-                 "41",
-                 "32"
+                 "56",
+                 "46",
+                 "33"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
+                 "65",
                  "60",
-                 "52"
+                 "53"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "97",
-                 "88",
+                 "87",
                  "87"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 23:05:02 2018</p>
+         Last Run: Sat Nov  3 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>77</td>
+                        <td>23</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>E</td>
@@ -475,7 +475,7 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>10</td>
+                        <td>22</td>
                         <td>79</td>
                         <td>0</td>
                         <td>8</td>
@@ -487,7 +487,7 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>9</td>
+                        <td>21</td>
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
-                 "10",
-                 "9"
+                 "23",
+                 "22",
+                 "21"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "77",
+                 "78",
                  "79",
                  "81"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 23:05:02 2018</p>
+         Last Run: Sat Nov  3 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -682,7 +682,7 @@
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>4</td>
                      </tr>
                      <tr>
@@ -691,7 +691,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -703,10 +703,10 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "67",
-                 "67"
+                 "65",
+                 "66"
                ]
              },
              {
